--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -3,7 +3,7 @@
 }
 
 body, html {
-  background-color: #FAFAFA;
+  background-color: #B2B2B2;
   font-family: 'Source Serif Pro', serif;
   margin: 0;
   height: 100%;
